Fix alignment on clicks in stats

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,15 +77,19 @@ font-size: 100px;
 };
 
 #stats-clicks{
+    grid-area: 1 / 1 / 2 / -1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+#stats-clicks>h2,
+#clicks-display{
+    text-align: center;
+}
 #clicks-display{
     font-size: 2rem;
 }
-
 #stats-upgrades{
     display: flex;
     flex-direction: column;
